<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_large_more"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large">

        <Button
            android:id="@+id/enter_english"
            style="@style/Default_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lang_en" />

        <Button
            android:id="@+id/enter_zh"
            style="@style/Default_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center"
            android:text="@string/lang_zh" />

        <Button
            android:id="@+id/enter_zh_tw"
            style="@style/Default_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center"
            android:text="@string/lang_zh_tw" />
    </LinearLayout>

</RelativeLayout>